--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,6 @@
   "scripts": {
     "cs-check": "phpcs --colors -p -s --extensions=php --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml --ignore=/tests/_data/,/_support/ src/ tests/",
     "cs-fix": "phpcbf --colors -p --extensions=php --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml --ignore=/tests/_data/,/_support/ src/ tests/",
-    "stan": "phpstan analyze -l 8 src/",
+    "stan": "phpstan analyze -l 8 src/"
   }
 }
