--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "description": "A security checker for your composer.lock",
     "license": "proprietary",
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "symfony/console": "^5.0",
+        "symfony/options-resolver": "^5.0",
+        "symfony/process": "^5.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.18",
