--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,3 @@
 parameters:
+    bootstrap: %rootDir%/../../../phpstan-bootstrap.php
     checkMissingIterableValueType: false
-
-    bootstrapFiles:
-        - phpstan-bootstrap.php
