--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "license": "proprietary",
     "require": {
         "php": ">=7.3",
-        "symfony/console": "^5.0",
-        "symfony/options-resolver": "^5.0",
-        "symfony/process": "^5.0"
+        "symfony/console": "^4.0.0 || ^5.0.0",
+        "symfony/options-resolver": "^4.0.0 || ^5.0.0",
+        "symfony/process": "^4.0.0 || ^5.0.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.18",
