--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,14 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: "0 0 * * *"
-      branches:
-        - 'master'
+  workflow_dispatch:
 
 jobs:
     checks:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php-version: ['7.3', '7.4']
+                php-version: ['7.3', '8.0']
 
         steps:
             - name: Setup PHP
@@ -25,9 +22,7 @@ jobs:
                   extensions: mbstring, intl
 
             - name: Checkout
-              uses: actions/checkout@v1
-              with:
-                  fetch-depth: 1
+              uses: actions/checkout@v2
 
             - name: Composer validate
               run: composer validate
